--- a/_config.yml
+++ b/_config.yml
@@ -3,7 +3,7 @@
 ## Source: https://github.com/hexojs/hexo/
 
 # Site
-title: Chino's Workspace
+title: Chino's Studio
 subtitle: ''
 description: 'An untypical developer'
 keywords:
@@ -13,7 +13,7 @@ timezone: ''
 
 # URL
 ## If your site is put in a subdirectory, set url as 'http://yoursite.com/child' and root as '/child/'
-url: https://ChinoMars.github.io
+url: https://chinomars.com
 root: /
 permalink: :year/:month/:day/:title/
 permalink_defaults:
