change git url for deploying
Signed-off-by: chuanjiangma <cj_ma@zju.edu.cn>

--- a/_config.yml
+++ b/_config.yml
@@ -99,7 +99,7 @@ theme: archer
 ## Docs: https://hexo.io/docs/deployment.html
 deploy:
   type: git
-  repo: https://github.com/ChinoMars/chinomars.github.io.git
+  repo: git@github.com:ChinoMars/chinomars.github.io.git
   branch: master
 
 # Search setting
