--- a/package.json
+++ b/package.json
@@ -9,24 +9,18 @@
     "server": "hexo server"
   },
   "hexo": {
-    "version": "4.2.1"
+    "version": ""
   },
   "dependencies": {
-    "hexo": "^4.2.1",
-    "hexo-algolia": "^1.3.1",
-    "hexo-cli": "^4.3.1",
-    "hexo-deployer-git": "^4.0.0",
-    "hexo-generator-archive": "^1.0.0",
-    "hexo-generator-category": "^1.0.0",
-    "hexo-generator-feed": "^2.2.0",
-    "hexo-generator-index": "^1.0.0",
-    "hexo-generator-tag": "^1.0.0",
-    "hexo-renderer-ejs": "^1.0.0",
-    "hexo-renderer-marked": "^2.0.0",
-    "hexo-renderer-scss": "^1.2.0",
-    "hexo-renderer-stylus": "^1.1.0",
-    "hexo-server": "^1.0.0",
-    "hexo-wordcount": "^6.0.1",
-    "node-sass": "^4.14.1"
+    "hexo": "^6.3.0",
+    "hexo-generator-archive": "^2.0.0",
+    "hexo-generator-category": "^2.0.0",
+    "hexo-generator-index": "^3.0.0",
+    "hexo-generator-tag": "^2.0.0",
+    "hexo-renderer-ejs": "^2.0.0",
+    "hexo-renderer-marked": "^6.0.0",
+    "hexo-renderer-stylus": "^3.0.0",
+    "hexo-server": "^3.0.0",
+    "hexo-theme-landscape": "^1.0.0"
   }
 }
