update avatar and favicon
Signed-off-by: chuanjiangma <cj_ma@zju.edu.cn>

--- a/themes/archer/_config.yml
+++ b/themes/archer/_config.yml
@@ -1,6 +1,6 @@
 # ========== Profile ========== #
 # avatar
-avatar: /avatar/Suzumiya.jpg
+avatar: /avatar/ti.jpg
 # author name
 author: Chino
 # signature
